[package]
name = "bdf-parser"
description = "BDF font parser"
version = "0.3.0"
edition = "2018"
authors = ["James Waples <james@wapl.es>", "Ralf Fuest <mail@rfuest.de>"]
repository = "https://github.com/embedded-graphics/bdf"
categories = ["parser-implementations"]
keywords = ["parser", "bdf", "font", "nom"]
license = "MIT OR Apache-2.0"

[dependencies]
bstr = "1.10.0"
nom = "7.1.3"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"

[dev-dependencies]
indoc = "2.0.5"
